<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#304252"
    tools:context="com.example.dailynote.Settings">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/personalInformation"
        android:background="@drawable/layer_list"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:orientation = "horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">
            <ImageButton
                android:layout_width="40sp"
                android:layout_height="50sp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/arrow_left"
                android:id="@+id/return_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/personInfo"
                android:text="@string/PersonInfo"
                android:textColor="#ffffff"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/photo"
                android:id="@+id/photo_text"
                android:textColor="#ffffff"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="80sp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical">
                <com.example.dailynote.RoundImageView
                    android:id="@+id/user_headShot"
                    android:layout_width="80sp"
                    android:layout_height="80sp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:layout_width="80sp"
                    android:layout_height="80sp"
                    android:layout_marginLeft="20dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/usericon_bg_circle"/>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:id="@+id/account_text"
                android:textColor="#ffffff"/>
            <EditText
                android:id="@+id/myAcount"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/personalinfo_layout"
                android:textColor="#ffffff"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username:"
                android:id="@+id/name_text"
                android:textColor="#ffffff"/>
            <EditText
                android:layout_width="wrap_content"
                android:id="@+id/myusername"
                android:layout_height="30sp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/personalinfo_layout"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/general">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@drawable/bottomline">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/generalSetting"
                android:text="@string/general"
                android:textColor="#ffffff"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:background="@drawable/bottomline">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/log_out_text"
                    android:textColor="#ffffff"/>
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/arrow"
                    android:id="@+id/log_out_button"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/bottomline">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_cache"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/clear_cache_text"
                    android:textColor="#ffffff"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cacheSize"
                    android:textColor="#ffffff"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="45dp"/>
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/arrow"
                    android:id="@+id/clear_cache_button"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_notes"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/delete_notes_text"
                    android:textColor="#ffffff"/>
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/arrow"
                    android:id="@+id/delete_notes_button"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
